# aoxc-api

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/: auth.py  chain_client.py  config.py  crypto.py  data.py  main.py  middleware.py  schemas.py  security.py
app/routers/: __init__.py  auth.py  chain.py  developer.py  user.py
docs/: ARCHITECTURE.md  SECURITY_MODEL.md  USAGE.md
tests/: test_api.py  test_gateway_security.py  test_security_config.py
